Fix: map list and forms now viewable on mobile & scrollable on both platforms - working on getting overlay to work

--- a/client/style.css
+++ b/client/style.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   /* min-height: 100vh; */
   /* overflow: hidden; */
@@ -31,7 +37,7 @@ body {
   height: 100vh;
   width: 100%;
   position: relative;
-  /* z-index: auto; */
+  z-index: auto;
 }
 
 /* .map-frame {
@@ -43,12 +49,19 @@ body {
 
 .map-overlay {
   position: absolute;
-  float: left;
+  /* float: left; */
   left: 0;
-  width: 25%;
-  height: 60%;
+  width: 100%;
+  height: 25vh;
+  background-color: #8b7fc0;
+  padding: 1em;
   z-index: 2;
+  overflow: auto;
 }
+
+/* .businesses-list {
+  overflow: auto;
+} */
 
 .businesses-list li {
   list-style: none;
